force-app/main/default/objects/Adocao__c/Adocao__c.object-meta.xml
<CustomObject>
    <label>Adoção</label>
    <nameField>
        <displayFormat>ADOT-{0000}</displayFormat>
        <label>Adoção Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoçoes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>