force-app/main/default/objects/Adocao__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Campo de data que representa a data da adoção</description>
    <inlineHelpText>Campo de data que representa a data da adoção</inlineHelpText>
    <label>Data</label>
    <type>Date</type>
</CustomField>