force-app/main/default/objects/Adocao__c/validationRules/ContatoMenorIdade.validationRule-meta.xml
<ValidationRule>
    <fullName>ContatoMenorIdade</fullName>
    <active>true</active>
    <description>Se o contato da adoção for menor que 18 anos, a adoção não pode ser
criada.</description>
    <errorConditionFormula>AND( Contact__r.Idade__c &lt; 18 )</errorConditionFormula>
    <errorMessage>Menores de idade não pode iniciar um processo de adoção.</errorMessage>
</ValidationRule>