force-app/main/default/objects/Adocao__c/validationRules/DataFechamentoMenorQueMesAtual.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFechamentoMenorQueMesAtual</fullName>
    <active>true</active>
    <description>Por conta do fechamento contábil, a data da adoção não pode ser maior que
o mês atual.</description>
    <errorConditionFormula>AND(Data__c &gt; TODAY() + 30 )</errorConditionFormula>
    <errorMessage>A data de adoção não pode ser maior que 30 dias</errorMessage>
</ValidationRule>