force-app/main/default/objects/Adocao__c/validationRules/NaoAdocaoMenorDiaHoje.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoAdocaoMenorDiaHoje</fullName>
    <active>true</active>
    <description>Uma adoção não pode ser criada com a data menor de hoje</description>
    <errorConditionFormula>Data__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>A data de adoção não pode ser inferior a data de hoje.</errorMessage>
</ValidationRule>